.snakemake/log/2022-08-31T115058.704275.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/__init__.py", line 593, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/int_test.smk", line 95, in <module>
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/atac-seq/workflow/atac.smk", line 106
    )
    ^
SyntaxError: positional argument follows keyword argument

SyntaxError in line 106 of /home/jeszyman/repos/atac-seq/workflow/atac.smk:
positional argument follows keyword argument (atac.smk, line 106)
  File "/home/jeszyman/repos/atac-seq/workflow/int_test.smk", line 95, in <module>
